# Callery

./: .gitignore  LICENSE  README.md  requirements.txt
c++/: .dockerignore  run-callery.sh
c++/loadBalancer/: CMakeLists.txt  Dockerfile
c++/loadBalancer/proto/: StockAggregatesStoreService.proto
c++/loadBalancer/src/: LoadBalancerController.cpp  Main.cpp
c++/sqlUtils/: CMakeLists.txt  ColumnDef.cpp  ColumnDef.h  ColumnDefTypes.cpp  SqlQueryBuilder.cpp  WhereClauses.cpp  WhereClauses.h
c++/sqlUtils/include/: ColumnDef.h  ColumnDef.hpp  ColumnDefTypes.h  ColumnDefTypes.hpp  SqlQueryBuilder.h  SqlQueryBuilder.hpp  WhereClauses.h  WhereClauses.hpp
c++/sqlUtils/src/: ColumnDef.cpp  SqlQueryBuilder.cpp  WhereClauses.cpp
c++/stockAggregatesStore/: CMakeLists.txt  Dockerfile
c++/stockAggregatesStore/include/: StockAggregatesStoreImpl.hpp  StockAggregatesTable.h  StockAggregatesTable.hpp  StockAggregatesTableMessage.h  StockAggregatesTableMessage.hpp  StockAggregatesTableQuery.hpp
c++/stockAggregatesStore/src/: Main.cpp  StockAggregatesStoreController.cpp  StockAggregatesStoreImpl.cpp  StockAggregatesTable.cpp  StockAggregatesTableMessage.cpp  StockAggregatesTableQuery.cpp
c++/stockAlgorithms/: CMakeLists.txt  Dockerfile  TrendDetector.hpp
c++/stockAlgorithms/include/: DickyFuller.hpp  StockAlgorithmsImpl.hpp
c++/stockAlgorithms/proto/: StockAlgorithmsService.proto
c++/stockAlgorithms/src/: DickyFuller.cpp  Main.cpp  StockAlgorithmsController.cpp  StockAlgorithmsImpl.cpp
c++/stockAlgorithms/test/src/: Test.cpp
c++/stockAlgorithms/test/testCases/: dickyFullerTest.json
javascript/: eslint.config.mjs  package-lock.json  package.json
javascript/src/: App.tsx  agent.ts  declarations.ts  index.html  index.tsx  theme.ts
javascript/src/components/: PairDashboard.tsx  StationaryTestDisplay.tsx  StockChart.tsx  TickerSelector.tsx
javascript/webpack/: webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
python/: requirements.txt
python/populateDatabase/: SqliteQueries.py  StoreStockData.py
python/stockAlgorithms/: DickyFuller.ipynb  PhillipsPerron.ipynb
